--- a/Page01.html
+++ b/Page01.html
@@ -1,6 +1,11 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+
+<meta http-equiv="Cache-Control" content="no-cache">
+<meta http-equiv="pragma" content="no-cache">
+
+
 <title>USERS BEHAVIOURS</title>
 
   <style>
