--- a/Page03.html
+++ b/Page03.html
@@ -1,6 +1,10 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+
+<meta http-equiv="Cache-Control" content="no-cache">
+<meta http-equiv="pragma" content="no-cache">
+
 <title>USERS BEHAVIOURS</title>
 
   <style>
@@ -46,7 +50,7 @@
 </div>
 
 <div align=center style="margin-top: 30px;">
-    <img align=center id=gallery_image>
+    <img align=center id=gallery_image src="./images/A00.jpg">
 </div>
 
 
